--- a/index.html
+++ b/index.html
@@ -19,8 +19,11 @@
             
             <div id="gif-div">
                 <h2>We're Expecting!!</h2>
-                <iframe src="https://giphy.com/embed/14kqI3Y4urS3rG" width="380" height="437" style="" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
-                <h3>1 Samuel 1:27</h3>
+                <iframe src="https://giphy.com/embed/xTiN0CNHgoRf1Ha7CM" width="380" height="470" style="" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+
+                <!--<iframe src="https://giphy.com/embed/14kqI3Y4urS3rG" width="380" height="437" style="" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+                <h3>1 Samuel 1:27</h3>-->
+                
             </div>
         </main>
         <footer>
