--- a/index.html
+++ b/index.html
@@ -18,10 +18,9 @@
             </div>
             
             <div id="gif-div">
-                <h2>We're Expecting!!</h2>
-               <!-- <iframe src="https://giphy.com/embed/xTiN0CNHgoRf1Ha7CM" width="380" height="470" style="" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
-                -->
-                <iframe src="https://giphy.com/embed/14kqI3Y4urS3rG" width="380" height="437" style="" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+                <h2>It's a Girl!!</h2>
+                <img class="picture" src="./assets/Pictures/GirlClothes.jpeg" alt="A pink infant's dress with small hearts next to a giraffe plushie and LEGO plumb blossum model" width="50%"/>
+
                 <h3>1 Samuel 1:27</h3>
                 
             </div>
